docs-archive/apache-airflow-providers-microsoft-azure/3.4.0/_sources/_api/airflow/providers/microsoft/azure/operators/adls/index.rst.txt
:mod:`airflow.providers.microsoft.azure.operators.adls`
=======================================================

.. py:module:: airflow.providers.microsoft.azure.operators.adls


Module Contents
---------------

.. py:class:: ADLSDeleteOperator(*, path: str, recursive: bool = False, ignore_not_found: bool = True, azure_data_lake_conn_id: str = 'azure_data_lake_default', **kwargs)

   Bases: :class:`airflow.models.BaseOperator`

   Delete files in the specified path.

       .. seealso::
           For more information on how to use this operator, take a look at the guide:
           :ref:`howto/operator:ADLSDeleteOperator`

   :param path: A directory or file to remove
   :type path: str
   :param recursive: Whether to loop into directories in the location and remove the files
   :type recursive: bool
   :param ignore_not_found: Whether to raise error if file to delete is not found
   :type ignore_not_found: bool
   :param azure_data_lake_conn_id: Reference to the :ref:`Azure Data Lake connection<howto/connection:adl>`.
   :type azure_data_lake_conn_id: str

   .. attribute:: template_fields
      :annotation: :Sequence[str] = ['path']

      

   .. attribute:: ui_color
      :annotation: = #901dd2

      

   
   .. method:: execute(self, context: dict)




.. py:class:: ADLSListOperator(*, path: str, azure_data_lake_conn_id: str = 'azure_data_lake_default', **kwargs)

   Bases: :class:`airflow.models.BaseOperator`

   List all files from the specified path

   This operator returns a python list with the names of files which can be used by
    `xcom` in the downstream tasks.

   :param path: The Azure Data Lake path to find the objects. Supports glob
       strings (templated)
   :type path: str
   :param azure_data_lake_conn_id: Reference to the :ref:`Azure Data Lake connection<howto/connection:adl>`.
   :type azure_data_lake_conn_id: str

   **Example**:
       The following Operator would list all the Parquet files from ``folder/output/``
       folder in the specified ADLS account ::

           adls_files = ADLSListOperator(
               task_id='adls_files',
               path='folder/output/*.parquet',
               azure_data_lake_conn_id='azure_data_lake_default'
           )

   .. attribute:: template_fields
      :annotation: :Sequence[str] = ['path']

      

   .. attribute:: ui_color
      :annotation: = #901dd2

      

   
   .. method:: execute(self, context: dict)




